--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "fuzzysort": "^1.1.4",
     "vue": "^2.5.17"
   },
   "devDependencies": {
